Fix flaky tests; right-align sign out button

--- a/src/main/assets/scss/main.scss
+++ b/src/main/assets/scss/main.scss
@@ -55,6 +55,12 @@
   margin-bottom: govuk-spacing(3);
 }
 
+.analytics-service-navigation__item--signout {
+  @media #{govuk-from-breakpoint(tablet)} {
+    margin-left: auto;
+  }
+}
+
 .analytics-multiselect {
   position: relative;
   margin-top: govuk-spacing(1);
